[Customer Portal v2] remove unused global search endpoints (accounts, attachments, comments)
